fix : 상품 상세 주소 필드 명 변경